# git-pilot

./: .ci-sync.json  .ci-sync.state.json  README.md  cli.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: release.yml
core/: comparator.py  diff.py  init.py  loader.py  state.py
docs/: architecture-guide.md  configuration.md  contributing.md  roadmap.md  templating.md
example-template-dir/: .git-pilot-state.json  override-example.yml.j2  values.yml
providers/: github.py
src/: main.py
src/cli/: commands.py  parsers.py
src/config/: loader.py
src/core/: comparator.py  farcade.py  init.py  interfaces.py  sync_engine.py
src/diff/: generator.py  interactive.py
src/providers/: base.py  github.py
src/state/: file_state.py
src/template_engine/: jinja_loader.py
src/utils/: hash.py  logger.py
test/: example-ci-template.j2  example-ci-template.yml.j2  override-example-ci-template-1.j2  override-example.yml.j2  override-example1.yml.j2  values.yml
test/includes/: _helpers.tpl
test/includes/units/: hello-world.j2
