[metadata]
name = git-pilot
version = 0.1.4
description = A CLI tool to sync and update Git workflows and configurations across multiple repositories efficiently and consistently.
author = r3d-shadow

[options]
python_requires = >=3.6
install_requires =
    PyGithub==2.6.1
    PyYAML==6.0.2
    Jinja2==3.1.6
    rich==14.0.0
    colorama==0.4.6
packages = find:

[options.entry_points]
console_scripts =
    git-pilot = src.main:main
